--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config build-utils/webpack.config.js --env.env=dev",
     "build": "webpack --config build-utils/webpack.config.js --env.env=prod",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config ./jest.config.json"
   },
   "author": "pawelsan",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.4.1",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
